[package]
name = "rezn"
version = "0.1.0"
edition = "2021"
authors = ["Andrea M. <andrea@andreamancuso.dev>"]
license = "MIT"
description = "Minimal Rust runtime for executing signed IR emitted by the Rezn DSL compiler."
repository = "https://github.com/rezn-project/rezn-runtime"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sled = "0.34"
ctrlc = "3.4.7"
