[package]
name = "rezn"
version = "0.1.0"
edition = "2021"
authors = ["Andrea M. <andrea@andreamancuso.dev>"]
license = "MIT"
description = "Minimal Rust runtime for executing signed IR emitted by the Rezn DSL compiler."
repository = "https://github.com/rezn-project/rezn"

[dependencies]
common = { path = "../common" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa = "5"
utoipa-axum = "0.2"
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
sled = "0.34"
ctrlc = "3.4.7"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
    "sync",
] }
reqwest = { version = "0.12.20", features = [
    "json",
    "cookies",
    "stream",
    "blocking",
] }
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
sha2 = "0.10.9"
hex = "0.4.3"
