[package]
name = "reznctl"
version = "0.1.0"
edition = "2021"
authors = ["Andrea M. <andrea@andreamancuso.dev>"]
license = "MIT"
description = ""
repository = "https://github.com/rezn-project/rezn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
sha2 = "0.10.9"
anyhow = "1.0"
sled = "0.34"
chrono = "0.4"
hex = "0.4.3"
