[package]
name = "reznctl"
version = "0.1.0"
edition = "2021"
authors = ["Andrea M. <andrea@andreamancuso.dev>"]
license = "MIT"
description = ""
repository = "https://github.com/rezn-project/rezn"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12.20", features = [
    "json",
    "cookies",
    "stream",
    "blocking",
] }
